--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>markbody</title>
-    <script src="../dist/markbody.js"></script>
+    <script src="https://unpkg.com/markbody@1.0.0/dist/markbody.js"></script>
 </head>
 <body>
 # header1
