--- a/example/index.html
+++ b/example/index.html
@@ -2,15 +2,21 @@
 <html>
 <head>
     <title>markbody</title>
-    <script src="https://unpkg.com/markbody@1.0.0/dist/markbody.js"></script>
+    <script>
+        window.markbody = {
+            root: '#root'
+        }
+    </script>
+    <script src="../dist/markbody.min.js"></script>
 </head>
 <body>
-# header1
-## header2
-```js
-var spongebob = 'squarepants'
-// comment
-```
+    <div id="root">
+        # header1
+        ## header2
+        ```js
+        var spongebob = 'squarepants'
+        // comment
+        ```
+    </div>
 </body>
 </html>
-
